# lavida-judger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/lavidajudger/: lavidajudger.h
src/: CMakeLists.txt  main.cpp
src/dummy/: CMakeLists.txt  main.cpp
src/lavidajudger/: CMakeLists.txt  lib.cpp
src/lavidajudger-cli/: CMakeLists.txt  main.cpp
src/special/: CMakeLists.txt  main.cpp
